OO-4045: sync assessment if the lecture block is changed